[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lampa-jsonp-proxy"
version = "1.0.0"
description = "JSONP proxy server for Lampa player"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "lampa_proxy"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Flask = "^2.3.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-flask = "^1.2.0"
black = "^23.0.0"
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
lampa-proxy = "lampa_proxy.server:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]